--- a/functions/views/Home.ejs
+++ b/functions/views/Home.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/nicepage.css" media="screen">
     <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/member.css" media="screen">
 <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/Home.css" media="screen">
+<link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/nikoniko.css" media="screen">
     <script class="u-script" type="text/javascript" src="/gakugeki-25a64/us-central1/app/javascripts/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/gakugeki-25a64/us-central1/app/javascripts/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 5.6.2, nicepage.com">
@@ -100,6 +101,7 @@
         </div>
       </div>
     </section>
+    <%- include("nikoniko.ejs") %>
     <section class="u-clearfix u-container-align-center u-palette-5-base u-section-3" id="sec-5815">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h1 class="u-align-center u-text u-text-default-lg u-text-default-xl u-text-palette-2-base u-text-1">開発プロジェクト</h1>
