--- a/functions/views/nikoniko.ejs
+++ b/functions/views/nikoniko.ejs
@@ -1,3 +1,15 @@
-<section class="u-clearfix u-container-align-center u-image u-section-nikoniko">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1"><img src="/gakugeki-25a64/us-central1/app/images/nikoniko.jpg" alt=""></div>
+<section class="u-section-nikoniko">
+    <div class="u-sheet-1">
+        <img class="u-image-1" src="/gakugeki-25a64/us-central1/app/images/nikoniko.jpg" alt="">
+        <div class="u-layout-1">
+            <div class="u-layout-cell-1">
+                <h3 class="u-align-center u-text-1">【　テーマ　】</h3>
+                <h4 class="u-align-center u-text-2">エンタメにおけるリアリティの<br class="block-767"/>重要性とその産み出し方</h4>
+                <p class="u-align-center u-text-3">日本アカデミー賞<br/>最優秀アニメーション作品賞</p>
+                <h4 class="u-align-center u-text-4">「<span class="u-text-4-sub"> こ の 世 界 の 片 隅 に </span>」</h4>
+                <h4 class="u-align-center u-text-5"><span class="u-text-5-sub">片渕須直</span>監督<span class="u-text-5-sub">がご登壇！</span></h4>
+                <p class="u-align-center u-text-6">ニコニコ超会議にてトークイベント実施！！<br/>登壇時間：13時30分〜14時00分</p>
+            </div>
+        </div>
+    </div>
 </section>
