--- a/functions/public/stylesheets/Home.css
+++ b/functions/public/stylesheets/Home.css
@@ -17,7 +17,7 @@
 }
 
 .u-section-1 {
-  background-image: none;
+  background-image: url("/gakugeki-25a64/us-central1/app/images/metaverse_image.jpeg");
 }
 
 .u-section-1 .u-sheet-1 {
@@ -39,6 +39,9 @@
 .u-section-1 .u-text-1 {
   font-size: 3rem;
   margin: 75px auto 0;
+  font-weight:bolder;
+  color:#fff;
+  -webkit-text-stroke: 2px #000;
 }
 
 .u-section-1 .u-text-2 {
@@ -49,6 +52,9 @@
 .u-section-1 .u-text-3 {
   font-size: 2rem;
   margin: 34px 0 0;
+  font-weight: bolder;
+  color:#fff;
+  -webkit-text-stroke: 1px #000;
 }
 
 .u-section-1 .u-btn-1 {
