--- a/functions/views/Home.ejs
+++ b/functions/views/Home.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/member.css" media="screen">
 <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/Home.css" media="screen">
 <link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/nikoniko.css" media="screen">
+<link rel="stylesheet" href="/gakugeki-25a64/us-central1/app/stylesheets/cooperation.css" media="screen">
     <script class="u-script" type="text/javascript" src="/gakugeki-25a64/us-central1/app/javascripts/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/gakugeki-25a64/us-central1/app/javascripts/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 5.6.2, nicepage.com">
@@ -184,5 +185,6 @@
         </div>
       </div>
     </section>
+    <%- include("cooperation.ejs") %>
     <%- include("footer.ejs") %>
 </body></html>
