リンクの追加

--- a/functions/views/cooperation.ejs
+++ b/functions/views/cooperation.ejs
@@ -46,7 +46,7 @@
               </div>
               <div class="u-layout-row u-layout-block-1">
                 <div class="u-container-align-center-lg u-container-align-center-md u-container-align-center-xl u-container-style u-layout-cell u-size-logo" id="vr-box-1">
-                    <div class="u-container-layout u-valign-middle-sm u-container-layout-2"><span class="u-align-center-sm u-align-center-xs u-file-icon u-icon u-text-palette-5-light-3 u-image-1"><img src="/gakugeki-25a64/us-central1/app/images/logo/エマージングテクノロジーズ.png" alt=""></span>
+                    <div class="u-container-layout u-valign-middle-sm u-container-layout-2"><span class="u-align-center-sm u-align-center-xs u-file-icon u-icon u-text-palette-5-light-3 u-image-1"><img src="/gakugeki-25a64/us-central1/app/images/logo/emerging-technology.png" alt=""></span>
                     </div>
                 </div>
                 <div class="u-container-align-center-sm u-container-align-center-xs u-container-style u-layout-cell u-shape-rectangle u-size-company_name" id="vr-box-2">
