--- a/functions/views/Arts.ejs
+++ b/functions/views/Arts.ejs
@@ -44,7 +44,7 @@
                     <div class="u-container-layout u-container-layout-1">
                       <h4 class="u-align-center u-text u-text-default u-text-4">ええあいいちば</h4>
                       <h1 class="u-align-center u-text u-text-default u-text-1">絵え愛市場</h1>
-                      <h4 class="u-align-center u-text u-text-default u-text-2">日本初となる<br/>メタバース空間上でのAIアート販売展示会
+                      <h4 class="u-align-center u-text u-text-default u-text-2">おそらく日本初となる<br/>メタバース空間上でのAIアート販売展示会
                       </h4>
                     </div>
                   </div>
@@ -63,8 +63,8 @@
                         </div>
                       </div>
                       <div class="u-container-layout u-container-layout-5">
-                      <a href="https://nicepage.dev" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-light-1 u-radius-50 u-btn-1">ワールドへ</a>
-                      <a href="https://nicepage.dev" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-light-1 u-radius-50 u-btn-2">Twitter</a>
+                      <a href="https://gakugekiinfinite.github.io/AIArtMarket2023/" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-light-1 u-radius-50 u-btn-1">ワールドへ</a>
+                      <a href="https://twitter.com/gakugeki_" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-light-1 u-radius-50 u-btn-2">Twitter</a>
                       </div>
                     </div>
                   </div>
