--- a/functions/views/Home.ejs
+++ b/functions/views/Home.ejs
@@ -46,7 +46,6 @@
                   <h2 class="u-align-center u-text u-text-1">〜世界最高〜
                   </h2>
                   <h3 class="u-align-center u-text u-text-3">SF世界を実現する</h3>
-                  <a href="#" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">ワールドへ</a>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-image u-image-round u-layout-cell u-radius-50 u-right-cell u-size-30 u-size-xs-60 u-image-1" src="" data-image-width="1440" data-image-height="871" id="top-logo-2">
@@ -75,7 +74,7 @@
               </div>
               <div class="u-container-align-center u-container-style u-layout-cell u-size-60 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-3">
-                  <a href="https://nicepage.com/wysiwyg-html-editor" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">詳しく</a>
+                  <a href="/gakugeki-25a64/us-central1/app/About" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">詳しく</a>
                 </div>
               </div>
             </div>
@@ -91,7 +90,7 @@
               <div class="u-container-style u-layout-cell u-left-cell u-layout-cell-1" src="">
                 <div class="u-container-layout u-container-layout-1">
                   <h3 class="u-align-center u-text u-text-3">ニコニコ超会議2023<br/>出展決定!!</h3>
-                  <a href="#" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">ニコニコ超会議公式ページ</a>
+                  <a href="https://chokaigi.jp/2023/about/" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">ニコニコ超会議公式ページ</a>
                 </div>
               </div>
               <div class="u-align-center u-container-style u-image u-layout-cell u-right-cell u-image-1" src="" data-image-width="1440" data-image-height="1440">
@@ -148,7 +147,7 @@
               </div>
               <div class="u-align-center u-container-style u-layout-cell u-right-cell u-shape-rectangle u-size-30 u-size-xs-60 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-2">
-                  <h3 class="u-align-center u-text u-text-default u-text-2">日本初となる<br/>メタバース空間上でのAIアート<br/>販売展示会
+                  <h3 class="u-align-center u-text u-text-default u-text-2">おそらく日本初となる<br/>メタバース空間上でのAIアート<br/>販売展示会
                   </h3>
                   <a href="" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">展示会へ</a>
                 </div>
@@ -170,14 +169,14 @@
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <h3 class="u-align-center u-text u-text-default u-text-3">学生の方</h3>
                   <h4 class="u-align-center u-text u-text-default u-text-4">学檄INFINITE製作委員会に参加したい</h4>
-                  <a href="https://nicepage.com/k/aesthetic-html-templates" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">こちらから</a>
+                  <a href="https://forms.gle/fTsjbD7Hf9GVyS556" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-1">こちらから</a>
                 </div>
               </div>
               <div class="u-container-align-center u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <h3 class="u-align-center u-text u-text-default u-text-5">ご協賛について</h3>
                   <h4 class="u-align-center u-text u-text-default u-text-6">学檄INFINITE製作委員会に協力したい</h4>
-                  <a href="https://nicepage.com/k/test-website-templates" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-2">こちらから</a>
+                  <a href="https://forms.gle/fvZLQt3euKSaH5Bt8" class="u-align-center u-border-none u-btn u-btn-round u-button-style u-hover-palette-3-light-2 u-palette-3-base u-radius-50 u-btn-2">こちらから</a>
                 </div>
               </div>
             </div>
