行間調整・一部色変更

--- a/functions/public/stylesheets/nicepage.css
+++ b/functions/public/stylesheets/nicepage.css
@@ -27377,7 +27377,7 @@ section.u-palette-1-dark-2:before,
 .u-container-layout.u-container-layout.u-palette-1-dark-2:before,
 .u-table-alt-palette-1-dark-2 tr:nth-child(even) {
   color: #ffffff;
-  background-color: #304659;
+  background-color: #06283D;
 }
 .u-input.u-palette-1-dark-2,
 .u-field-input.u-palette-1-dark-2,
