--- a/functions/views/header.ejs
+++ b/functions/views/header.ejs
@@ -30,7 +30,7 @@
             <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/gakugeki-25a64/us-central1/app/Home">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/gakugeki-25a64/us-central1/app/About">About</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/gakugeki-25a64/us-central1/app/Arts">Arts</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/gakugeki-25a64/us-central1/app/Home#sec-5815">Projects</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/gakugeki-25a64/us-central1/app/Projects">Projects</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="/gakugeki-25a64/us-central1/app/Home#sec-5cbb">Menbers</a>
 </li></ul>
           </div>
